@@ -1,8 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION($Revision: 1.4 $)
+AC_REVISION($Revision: 1.5 $)
 AC_PREREQ(2.53)
-#test -z "$CFLAGS" && CFLAGS="-g"
-AC_INIT([Heimdal], [0.6.1], [heimdal-bugs@pdc.kth.se])
+##test -z "$CFLAGS" && CFLAGS="-g"
+AC_INIT([Heimdal], [0.6.2], [heimdal-bugs@pdc.kth.se])
 AC_CONFIG_SRCDIR([kuser/kinit.c])
 AM_CONFIG_HEADER(include/config.h)
 
